k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: express
spec:
  selector:
    app: express
  ports:
    - name: http
      port: 80
      targetPort: http
